# gorofan

./: .env.example  .gitignore  AI_캐릭터챗_소설앱_프로젝트_계획서.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: anthropic.py  base.py  gemini.py  ollama.py  openai_compat.py  registry.py
backend/app/api/: router.py  sse.py
backend/app/auth/: service.py
backend/app/core/: deps.py  errors.py  jobs.py  logging.py  middleware.py  pagination.py  security.py  storage.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  ai_config.py  character.py  chat.py  entry.py  novel.py  user.py  world.py
backend/app/repositories/: base.py  entry_repository.py
backend/app/schemas/: ai_config.py  character.py  chat.py  common.py  entry.py  novel.py  world.py
backend/app/services/: ai_config_service.py  character_service.py  chat_service.py  entry_retrieval.py  entry_service.py  novel_service.py  persona_service.py  provider_resolve.py  summary_job.py  world_service.py
backend/tests/: conftest.py
backend/tests/golden/: __init__.py  retrieval_context_fixture.py  test_retrieval_context_golden.py
backend/tests/integration/: test_api.py  test_auth.py  test_entry_retrieval.py  test_entry_review_api.py  test_entry_service.py  test_migrations.py  test_streaming.py
backend/tests/property/: test_prompt_budget.py
backend/tests/unit/: test_chapter_doc.py  test_entry_context_assembly.py  test_entry_retrieval.py  test_entry_schema.py  (+1 more)
(+125 files in other folders)
